--- a/custom-addons/nilco_pos_multi_uom_price/views/posz_js.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/posz_js.xml
@@ -2,6 +2,6 @@
 <odoo>
 	<!--i add group zero to xml -->
 	<record id="group_zero_button" model="res.groups">
-		<field name="name">Disable zero Button</field>
+		<field name="name"> zero Button</field>
 	</record>
 </odoo>
