--- a/custom-addons/pos_manager_validation_mac5/views/res_config_settings_views.xml
+++ b/custom-addons/pos_manager_validation_mac5/views/res_config_settings_views.xml
@@ -49,7 +49,7 @@
                              help="Allow manager to validate cash in/out">
                         <field name="iface_validate_cash_move"/>
                     </setting>
-                    <setting id="iface_validate_Refund" string="Cash In/Out"
+                    <setting id="iface_validate_Refund" string="Refund"
                              help="Allow manager to validate Refund">
                         <field name="iface_validate_Refund"/>
                     </setting>
