--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -784,7 +784,7 @@
 
                                         </td>
                                          <td class="second_table" style="text-align:right;">
-                                              <span t-esc="line.product_uom_id.name"/>
+                                              <span t-esc="line.multi_uom_price_id.name_field"/>
                                         </td>
                                                 <!-- Editeing-->
 
