--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -34,6 +34,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='lines']/tree/field[@name='full_product_name']" position="after">
                     <field name="product_uom_id"/>
+                    <field name="pos_multi_uom_name"/>
                     <field name="Ratio"/>
                 </xpath>
             </field>
