--- a/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price_barcode/views/product_view.xml
@@ -72,6 +72,7 @@
             <tree>
                 <field name="product_id"/>
                 <field name="category_id" invisible="1"/>
+                 <field name="name_field"/>
                 <field name="uom_id"/>
                 <field name="price"/>
                 <field name="cost"/>
