--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -724,6 +724,12 @@
                                             <br/>
                                             <span class="lable_bold">الوحدة</span>
                                         </th>
+                                        <th align="center" name="discount" class="second_table"
+                                            style="background-color:#4f4d4d;text-align:center;color:white;">
+                                            <span class="lable_bold">name field</span>
+                                            <br/>
+                                            <span class="lable_bold"> تفصيل الوحدة</span>
+                                        </th>
 
                                         <th align="center" name="taxable_rate" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
