--- a/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
+++ b/custom-addons/ksa_zatca_integration/reports/e_invoicing_b2b.xml
@@ -685,6 +685,14 @@
                                             <br/>
                                             <span class="lable_bold">ﺳﻌﺮ اﻟﻮﺣﺪة</span>
                                         </th>
+
+                                         <th align="center" name="discount" class="second_table"
+                                            style="background-color:#4f4d4d;text-align:center;color:white;">
+                                            <span class="lable_bold">name field</span>
+                                            <br/>
+                                            <span class="lable_bold"> تفصيل الوحدة</span>
+                                        </th>
+
                                         <th align="center" name="quantity" class="second_table"
                                             style="background-color:#4f4d4d;text-align:center;color:white;">
                                             <span class="lable_bold">Quantity</span>
@@ -737,6 +745,9 @@
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc='doc._get_zatca_product_name(line)["name"]["value"]'/>
                                         </td>
+                                         <td class="second_table" style="text-align:right;">
+        <span t-esc="line.sales_multi_uom_id.name_field or 'Not Available'"/>
+        </td>
                                         <td class="second_table" style="text-align:right;">
                                             <span t-esc="doc.get_bt_146(line.zatca_id)"
                                                   t-options='{"widget": "monetary", "display_currency": doc.currency_id}'/>
