--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <odoo>
     <record id="product_template_form_view" model="ir.ui.view">
         <field name="name">product.template.form.inherit</field>
@@ -54,7 +55,6 @@
                 <xpath expr="//field[@name='order_line']/tree/field[@name='product_uom_qty']" position="after">
                     <field name="selected_uom_ids" invisible="1"/>
                     <field name="sales_multi_uom_id" readonly="state in ('sale','done', 'cancel')"/>
-                    <field name="sale_multi_uom_name" />
                 </xpath>
                  <xpath expr="//field[@name='order_line']/form/group/group/field[@name='product_id']" position="after">
                     <field name="selected_uom_ids" invisible="1"/>
@@ -84,9 +84,7 @@
         <field name="inherit_id" ref="account.view_move_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='invoice_line_ids']/tree//field[@name='name']" position="after">
-                  <field name="selected_uom_ids" invisible="1"/>
-                  <field name="sales_multi_uom_id" widget="many2one"/>
-                                     <field name="sale_multi_uom_name" />
+
 
 
             </xpath>
@@ -94,7 +92,5 @@
         </field>
     </record>
 
-
-
-
 </odoo>
+
