--- a/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
+++ b/custom-addons/ksa_zatca_integration_pos/reports/e_invoicing_b2c_invoice.xml
@@ -792,7 +792,9 @@
                                          <td class="second_table" style="text-align:right;">
                                               <span t-esc="line.product_uom_id.name"/>
                                         </td>
-                                         
+                                         <td class="second_table" style="text-align:right;">
+                                <span t-esc="line.product_uom_id.sale_multi_uom_name "/>
+                                  </td>
                                                 <!-- Editeing-->
 
                                        <!-- <td class="second_table" style="text-align:right;">
