--- a/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
+++ b/custom-addons/nilco_pos_multi_uom_price/views/product_view.xml
@@ -76,20 +76,18 @@
             </field>
      </record>
 
-<template id="orderline_template" inherit_id="point_of_sale.orderline">
-    <xpath expr="//div[@class='info-list ms-2']" position="inside">
-        <div class="name-field">
-            <t t-esc="line.name_field"/>
-        </div>
-    </xpath>
-     <xpath expr="//ul[@class='info-list ms-2']" position="inside">
-            <!-- Add a new list item -->
-            <li class="additional-info">
-                 <div class="name-field">
-            <t t-esc="line.name_field"/>
-        </div>
-            </li>
-        </xpath>
-</template>
+  <!-- Inherit the existing orderline template -->
+        <template id="custom_orderline_template" inherit_id="point_of_sale.assets">
+            <xpath expr="//t[@t-name='point_of_sale.Orderline']" position="inside">
+                <!-- Add a new list item to the existing info-list -->
+                <xpath expr="//ul[@class='info-list ms-2']" position="inside">
+                    <li class="additional-info">
+                        <div class="name-field">
+                            <t t-esc="line.name_field"/>
+                        </div>
+                    </li>
+                </xpath>
+            </xpath>
+        </template>
 </odoo>
 
